# BING

./: README.md
linux/: CMakeLists.txt
linux/BING/: BING.cpp  BING.h  CMakeLists.txt  CmFile.cpp  DataSetVOC.cpp  DataSetVOC.h  FilterBING.cpp  FilterBING.h  Main.cpp  ValStructVec.h  stdafx.h
matlab/linux/: build.m  mexBING.cpp  mexBING.m  mexBING.mexa64  runDataset.m
matlab/windows/: build.m  mexBING.cpp  mexBING.m  mexBING.mexw64  runDataset.m
windows/: BING.sln
windows/BING/: BING.cpp  BING.h  BING.vcxproj  BING.vcxproj.filters  CmFile.cpp  CmFile.h  DataSetVOC.cpp  DataSetVOC.h  FilterBING.cpp  Main.cpp  ValStructVec.h  stdafx.h
windows/LibLinear/: LibLinear.vcxproj  LibLinear.vcxproj.filters
